==================== 2.17.92 ====================

2007-02-19  Vincent Untz  <vuntz@gnome.org>

	* panel-run-dialog.c: add missing include
	* panel-menu-button.c: ditto
	* launcher.c: remove useless include
	* panel-action-button.c: ditto
	* panel-addto.c: ditto
	* panel-applet-frame.c: (panel_applet_frame_load_from_gconf): check
	that the iid is not an emptry string too
	* applet.c: (setup_an_item): get rid of setup_menuitem() and
	panel_create_menu() usage
	(panel_applet_create_menu): ditto
	* panel-context-menu.c: (panel_context_menu_build_edition): ditto
	(panel_context_menu_create): ditto

2007-02-18  Vincent Untz  <vuntz@gnome.org>

	* panel-menu-bar.c: (panel_menu_bar_enter_applications): call
	panel_menu_bar_update_text_gravity() and connect to the screen-changed
	signal because we need to set the gravity again
	(set_item_text_gravity): new, magic pango stuff
	(panel_menu_bar_update_text_gravity): new
	Fix bug #337443, based on patch by Behdad Esfahbod <behdad@gnome.org>

2007-02-18  Vincent Untz  <vuntz@gnome.org>

	Fix bug #343092: the image is not always 48x48 anymore

	* panel-run-dialog.c: (panel_run_dialog_set_icon): add argument to
	force the reloading of icon, move useless check so that it's useful,
	use GtkSettings to get the size of the icon instead of hardcoding 48
	(panel_run_dialog_find_command_idle): update for
	panel_run_dialog_set_icon() change
	(program_list_selection_changed): ditto
	(panel_run_dialog_style_set): new, reload icon
	(panel_run_dialog_screen_changed): ditto
	(panel_run_dialog_setup_pixmap): connect to style-set and
	screen-changed signal
	* panel-run-dialog.glade: don't force size of the image (and totally
	rewritten by glade3...)

2007-02-17  Vincent Untz  <vuntz@gnome.org>

	* panel-applet-frame.c: remove useless moving_focus_out field

2007-02-17  Vincent Untz  <vuntz@gnome.org>

	* panel-util.c: (panel_util_launch_from_key_file): get localized values
	for relevant keys.
	This shows translated names in "Starting %s..."