@@ -1,3 +1,13 @@
+2007-02-27  Vincent Untz  <vuntz@gnome.org>
+
+	* menu.c: (setup_menuitem): don't connect to the size request signal
+	if the icon size is invalid
+	* panel-menu-items.c: (panel_place_menu_item_new),
+	(panel_desktop_menu_item_new): use an invalid icon size for
+	setup_menuitem() if we don't use icon
+	Fix large height of the menubar, which forced the panel size to be at
+	least 28.
+
 ==================== 2.17.92 ====================
 
 2007-02-19  Vincent Untz  <vuntz@gnome.org>
